Input alignment fixes, wider scrollbar handle, more visible checkboxes

--- a/adminer.scss
+++ b/adminer.scss
@@ -121,6 +121,12 @@ select, input:not(.icon):not([type="checkbox"]):not([type="radio"]), textarea, p
     border: 1px solid scale-color($color: $primary, $alpha: -50%) !important;
     border-radius: 2px;
 }
+select, input:not(.icon):not([type="checkbox"]):not([type="radio"]) {
+    height: 2em;
+}
+select {
+    vertical-align: middle;
+}
 input.icon {
     background-color: $dark;
     border-radius: 2px;
@@ -173,8 +179,8 @@ code {
 }
 
 ::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
+  width: 9px;
+  height: 9px;
 }
 ::-webkit-scrollbar-button {
   width: 0px;
@@ -218,11 +224,15 @@ input[type="checkbox"], input[type="radio"] {
         opacity: .5;
     }
 }
-input[type="checkbox"]:checked::before {
-    width: .65em;
-    height: .65em;
-    transform-origin: bottom left;
-    clip-path: polygon(39% 65%, 76% 10%, 95% 24%, 46% 97%, 5% 67%, 18% 49%);
+input[type="checkbox"]:checked {
+    background-color: $primary;
+    &::before  {
+        width: .65em;
+        height: .65em;
+        transform-origin: bottom left;
+        background-color: $dark;
+        clip-path: polygon(39% 65%, 76% 10%, 95% 24%, 46% 97%, 5% 67%, 18% 49%);
+    }
 }
 input[type="radio"] {
     border-radius: 9rem;
@@ -239,4 +249,5 @@ input[type="radio"] {
 #help {
     background-color: $dark;
     border: 1px solid $primary;
+    border-radius: 2px;
 }
